# battlesnake

./: Cargo.toml
crates/game/: Cargo.toml
crates/game/src/: lib.rs
crates/mcts/: Cargo.toml
crates/monte_carlo/: Cargo.toml
crates/monte_carlo/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: bfs.rs  dfs.rs  direction.rs  dungeon.rs  lib.rs  point.rs  traits.rs
src/: lib.rs  main.rs  routes.rs  state.rs
src/snakes/: dumb.rs  mod.rs
src/types/: board.rs  cell.rs  game.rs  mod.rs  snake.rs
