[workspace]
members = ["crates/search", "crates/monte_carlo", "crates/game", "bin/battlesnake"]
default-members = ["bin/battlesnake"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
authors = ["alexfertel <https://twitter.com/alexfertel>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/battlesnake"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["battlesnake"]
exclude = [".github/"]
description = """
Battlesnakes written in Rust
"""
