[package]
name = "search"
version = "0.1.0"
edition = "2021"
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
paste = "1.0.14"


